# jayagra.com

./: .example.env  .gitattributes  .gitignore  Caddyfile  Cargo.toml  LICENSE  README.md  build.rs  stop.sh
public/: 2048.html  2048_8.html  404.html  about.html  base64.html  cookies.html  ec.html  index.html  keys.html  minesweeper.html  misc.html  privacy.html  projects.html  pw.html  scouting.html  site.webmanifest  sitemap.xml  snake.html  snek.html  support.html  timestamp.html  tools.html  tos.html  wordle.min.js
public/static/: about.css  about.min.css  base64.css  base64.min.css  base64.min.js  base64.ts  bigPill.css  bigPill.min.css  grids.css  grids.min.css  home.css  home.min.css  index.css  keys.css  keys.min.css  main.css  main.min.css  menu.css  menu.min.css  pillStyles.css  pillStyles.min.css  pills.css  pills.min.css  projects.css  projects.min.css  timestamp.css  timestamp.min.css  timestamp.min.js  timestamp.ts  tools.css  tools.min.css
public/static/2048/: cache.appcache  main.css  main.min.js
public/static/2048_8/: main.css  main.min.js
public/static/apes/css/: index.css  index.min.css
public/static/apes/js/: cycles.js  cycles.min.js  index.js  index.min.js  index.pack.js  tooltips.js  tooltips.min.js
public/static/base64/: float.css
public/static/ms/: XP.css  ms.min.js
public/static/snake/: script.min.js  style.css
public/static/snek/: style.css
src/: gc.rs  gc_interface.rs  get_out.rs  main.rs  resources.rs  static_files.rs
