[package]
name = "jayagra"
version = "1.0.0"
authors = ["Jayen Agrawal"]
edition = "2021"
homepage = "https://jayagra.com/"
repository = "https://github.com/JayAgra/jayagra.com"
license = "MIT"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-governor = "0.5.0"
actix-http = "3.4"
actix-web = { version = "4.4", features = ["openssl"] }
actix-web-static-files = "4.0.1"
dotenv = "0.15.0"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
openssl = { version = "0.10", features = ["v110"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"

[profile.release]
codegen-units = 1