[package]
name = "jayagra"
version = "1.2.0"
authors = ["Jayen Agrawal"]
edition = "2021"
homepage = "https://jayagra.com/"
repository = "https://github.com/JayAgra/jayagra.com"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-files = "0.6.10"
actix-governor = "0.10.0"
actix-http = "3.12.1"
actix-web = { version = "4.13.0" }
actix-web-static-files = { version = "4.1.1", features = ["static-files-03"] }
dotenvy = "0.15.7"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static-files = "0.3.1"

[build-dependencies]
static-files = "0.3.1"
